<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical">
    <!-- name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/name" />

        <EditText
            android:id="@+id/signName"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="text"
            android:maxLength="5" />
    </LinearLayout>
    <!-- id -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/id" />

        <EditText
            android:id="@+id/signID"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="text"
            android:maxLength="10" />

        <Button
            android:id="@+id/idChk"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@drawable/listbtn"
            android:text="중복확인" />
    </LinearLayout>
    <!-- pw -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/pw" />

        <EditText
            android:id="@+id/signPW"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="textPassword"
            android:maxLength="10" />
    </LinearLayout>
    <!-- pw check -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/pwchk" />

        <EditText
            android:id="@+id/pwChk"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="textPassword"
            android:maxLength="10" />

    </LinearLayout>
    <!-- email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/email" />

        <EditText
            android:id="@+id/signEmail"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <!-- phone -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/phome" />

        <EditText
            android:id="@+id/signPhone"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="phone"
            android:maxLength="15" />
    </LinearLayout>
    <!-- category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="center"
                android:text="@string/category" />
        </LinearLayout>
        <!-- 카테고리 스피너로 표시 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/signctSport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="스포츠" />

                <CheckBox
                    android:id="@+id/signctStudy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="학습" />

                <CheckBox
                    android:id="@+id/signctTravel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="여행" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/signctMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="영화" />

                <CheckBox
                    android:id="@+id/signctSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="음악" />

                <CheckBox
                    android:id="@+id/signctInfant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="육아" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- alarm -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/alarm" />

        <RadioGroup
            android:id="@+id/signalrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="수신" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="거절" />
        </RadioGroup>
    </LinearLayout>
    <!-- question -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/question" />

        <Spinner
            android:id="@+id/signQuestion"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:prompt="@string/question" />
    </LinearLayout>
    <!-- answer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/answer" />

        <EditText
            android:id="@+id/signAnswer"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="text" />
    </LinearLayout>
    <!-- yes or no -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signOkBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/listbtn"
            android:text="가입" />

        <Button
            android:id="@+id/signCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/listbtn"
            android:text="취소" />
    </LinearLayout>
</LinearLayout>
