<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <!-- roomname -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="방 이름"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/roomnamechange"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
    <!-- 관심분야 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/sppin">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="관심분야"
            android:textSize="15dp" />


        <Spinner
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:id="@+id/roomcategorychange"
            android:prompt="@string/inter" />

    </LinearLayout>
    <!-- keyword -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="키워드"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/roomkeyword1change"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />
        <EditText
            android:id="@+id/roomkeyword2change"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />
        <EditText
            android:id="@+id/roomkeyword3change"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
    <!-- 최대인원-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="최대인원"
            android:textSize="15sp" />

        <Spinner
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:id="@+id/roomMaxMemberchange"
            android:prompt="@string/people" />

    </LinearLayout>
    <!-- area for activity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="활동지역"
            android:textSize="15dp" />

        <Spinner
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:id="@+id/roomLocateSichange"
            android:prompt="@string/si"/>
        <Spinner
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:id="@+id/roomLocateGuchange"
            android:prompt="@string/gu"/>
    </LinearLayout>
    <!-- information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="정보"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/roomInformationchange"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <!-- yes or no -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeRoombtn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="수정"
            android:background="@drawable/listbtn"/>

        <Button
            android:layout_marginLeft="5dp"
            android:id="@+id/nochangeRoombtn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="취소"
            android:background="@drawable/listbtn"/>
    </LinearLayout>
</LinearLayout>